<resources>
    <string name="app_name">Stamp</string>
    <string name="join_now">Join Now</string>
    <string name="login">Login</string>
    <string name="welcome_to_stamp">Welcome to Stamp!</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="stamp">Add Stamp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search ...</string>
    <string name="discover">Discover</string>
    <string name="add_a_new_stamp">Add a new stamp</string>
    <string name="zero">0</string>
    <string name="stamps">Stamps</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_account">Manage Account</string>
    <string name="account">Account</string>
    <string name="change_image">Change Image</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
</resources>