<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    tools:ignore="ExtraText">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />



            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar_layout_profile">

        <!--start of layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--outline-->
            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <!--profile pict-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_profile"/>

                <!--content outline-->
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    >
                    <!--information content inside-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        >

                        <!--stamps-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:id="@+id/total_stamp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stamps"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                />

                        </LinearLayout> <!--stamps-->

                        <!--followers-->
                        <LinearLayout
                            android:id="@+id/followers_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:id="@+id/total_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                />

                        </LinearLayout><!--followers-->

                        <!--following-->
                        <LinearLayout
                            android:id="@+id/following_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:id="@+id/total_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="12sp"
                                android:textColor="@color/colorPrimaryDark"
                                />
                        </LinearLayout> <!--following-->

                    </LinearLayout><!--information content inside-->

                    <!--content button inside-->
                    <Button
                        android:id="@+id/edit_btn"
                        android:layout_width="170dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:text="@string/edit_account"
                        android:textAllCaps="false"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/design_solid"/>

                </LinearLayout><!--content-->


            </LinearLayout><!--outline-->

            <!--midbar-->
            <LinearLayout
                android:id="@+id/mid_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                >

                <ImageButton
                    android:id="@+id/grid_btn"
                    android:layout_width="0dp"
                    android:layout_height="49sp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_grid"
                    android:scaleType="fitCenter"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <ImageButton
                    android:id="@+id/saved_btn"
                    android:layout_width="0dp"
                    android:layout_height="49sp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_bookmark_outline"
                    style="?android:attr/buttonBarButtonStyle"
                    />

            </LinearLayout><!--midbar-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_saved"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout><!--end of layout-->

    </RelativeLayout>

</RelativeLayout>